# libtropic

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUDIT-SUMMARY.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  NOTICE  README.md  audit-report.json  audit-report.md  codechecker.skip  codechecker_build.sh  codechecker_config.json  dummy_action_test.c  generate_sh0_keys.cmake  mkdocs.yml  project.yml  ts_sw_setup.yml  versions.json
.github/: pull_request_template.md
.github/workflows/: build_docs.yml  build_docs_develop.yml  build_docs_master.yml  build_docs_release.yml  build_docs_upload_artifacts.yml  clang-format-check.yml  clang_format_check.yml  coverage.yml  integration_tests.yml  main.yml  manual.yml  release_new_version.yml  (+4 more)
TROPIC01_fw_update_files/: README.md  convert.py  tropic_fw_update_files.md
cal/: CMakeLists.txt
cal/mbedtls_v4/: CMakeLists.txt  libtropic_mbedtls_v4.h  lt_mbedtls_v4_aesgcm.c  lt_mbedtls_v4_common.c  lt_mbedtls_v4_common.h  lt_mbedtls_v4_ecdsa.c  lt_mbedtls_v4_hmac_sha256.c  lt_mbedtls_v4_sha256.c  lt_mbedtls_v4_x25519.c
cal/trezor_crypto/: CMakeLists.txt  libtropic_trezor_crypto.h  lt_trezor_crypto_aesgcm.c  lt_trezor_crypto_common.c  lt_trezor_crypto_ed25519.c  lt_trezor_crypto_hmac_sha256.c  lt_trezor_crypto_sha256.c  lt_trezor_crypto_x25519.c
cmake/: coverage_flags.cmake  generate_sh0_keys.cmake  static_asan_flags.cmake  strict_compile_flags.cmake
docs/: CMakeLists.txt  Doxyfile.in  contributors.md  faq.md  index.md  new_crypto_backends.md  requirements.txt
examples/: README.md  keys.c  keys.h  libtropic_config_1.c  libtropic_config_1.h  libtropic_example_1.c  libtropic_example_1.h  libtropic_examples.h  lt_ex_fw_update.c  lt_ex_hello_world.c  lt_ex_hello_world_separate_API.c  lt_ex_hw_wallet.c  lt_ex_macandd.c  lt_ex_macandd_pin_demo.c  lt_ex_registry_template.c.inc  lt_ex_show_chip_id_and_fwver.c  lt_ex_test_ireversible.c  lt_ex_test_reversible.c  lt_test_ireversible.c  lt_test_reversible.c  lt_test_samples_1.c  readme.MD  tcp_server.py  utils.c  utils.h
examples/crypto_tests/: CMakeLists.txt  crypto_tests.h  main.c
examples/stm32_example/: CMakeLists.txt  readme.MD
examples/stm32_example/Inc/: main.h  stm32f4xx_hal_conf.h
examples/stm32_example/Src/: cryptography_tests.c  cryptography_tests.h  main.c  stm32f4xx_hal_msp.c
examples/unix_example/: CMakeLists.txt  main.c
hal/crypto/: CMakeLists.txt
hal/crypto/mbedtls/: README.md  lt_crypto_macros.h  lt_mbedtls_aesgcm.c  lt_mbedtls_common.c  lt_mbedtls_common.h  lt_mbedtls_ecdsa.c  lt_mbedtls_ed25519.c  lt_mbedtls_hmac_sha256.c  lt_mbedtls_sha256.c  lt_mbedtls_x25519.c
hal/crypto/mbedtls_v4/: CMakeLists.txt  README.md  libtropic_mbedtls_v4.h  lt_crypto_macros.h  lt_mbedtls_v4.h  lt_mbedtls_v4_aesgcm.c  lt_mbedtls_v4_common.c  lt_mbedtls_v4_common.h  lt_mbedtls_v4_ecdsa.c  lt_mbedtls_v4_ed25519.c  lt_mbedtls_v4_hmac_sha256.c  lt_mbedtls_v4_sha256.c  lt_mbedtls_v4_x25519.c
hal/crypto/trezor_crypto/: CMakeLists.txt  lt_crypto_macros.h  lt_crypto_trezor_aesgcm.c  lt_crypto_trezor_ecdsa.c  lt_crypto_trezor_ed25519.c  lt_crypto_trezor_hmac_sha256.c  lt_crypto_trezor_sha256.c  lt_crypto_trezor_x25519.c  lt_trezor_crypto.h  lt_trezor_crypto_aesgcm.c  lt_trezor_crypto_ecdsa.c  lt_trezor_crypto_ed25519.c  lt_trezor_crypto_hmac_sha256.c  lt_trezor_crypto_sha256.c  lt_trezor_crypto_x25519.c  ts_trezor_aesgcm.c  ts_trezor_ed25519.c  ts_trezor_sha256.c  ts_trezor_x25519.c
include/: TROPIC01_configuration_objects.h  bits.h  libtropic.h  libtropic_common.h  libtropic_examples.h  libtropic_functional_tests.h  libtropic_l2.h  libtropic_l3.h  libtropic_logging.h  libtropic_macros.h  libtropic_platform.h  libtropic_port.h  libtropic_separated_API.h  lt_l2.h  lt_l3.h  tools.h  tropic01_application_co.h  tropic01_bootloader_co.h
keys/: keys.c
master/: 404.html  index.html  requirements.txt  sitemap.xml
patches/: 0001-LTAUD-CRIT-001-secure-memory-zeroization.patch  0002-LTAUD-HIGH-001-replace-strcpy-with-snprintf.patch  0003-LTAUD-HIGH-002-replace-sprintf-with-snprintf.patch  0004-LTAUD-HIGH-003-fix-integer-overflow-fw-update.patch  README.md
provisioning_data/: README.md
scripts/: build_docs.sh  ceedling.yml  extract_x25519_key_data.py  model_runner.py  model_test_runner.py
src/: libtropic.c  libtropic_default_sh0_keys.c  libtropic_l2.c  libtropic_l3.c  libtropic_separated_API.c  libtropic_sh0_keys.c  lt_aesgcm.h  lt_asn1_der.c  lt_asn1_der.h  lt_crc16.c  lt_crc16.h  lt_crypto_common.h  lt_ecdsa.h  lt_ed25519.h  lt_hkdf.c  lt_hkdf.h  lt_hmac_sha256.h  lt_l1.c  lt_l1.h  lt_l1_port_wrap.c  lt_l1_port_wrap.h  lt_l2.c  lt_l2.h  lt_l2_api_structs.h  lt_l2_frame_check.c  lt_l2_frame_check.h  lt_l3.c  lt_l3.h  lt_l3_api_structs.h  lt_l3_process.c  lt_l3_process.h  lt_l3_transfer.c  lt_l3_transfer.h  lt_port_wrap.c  lt_port_wrap.h  lt_random.c  lt_random.h  lt_secure_memory.c  lt_secure_memory.h  lt_secure_memzero.c  (+31 more)
stm32_example/: CMakeLists.txt  readme.MD
tests/: README.md  test_ts_common.c  test_ts_crc.c  test_ts_l1.c  test_ts_l1_input_params.c  test_ts_l2.c  test_ts_l2_input_params.c  test_ts_l3.c  test_ts_l3_input_params.c  test_ts_libtropic_input_params.c
tests/functional_mock/: CMakeLists.txt  lt_functional_mock_tests.h  lt_test_mock_attrs.c  lt_test_mock_invalid_in_crc.c  main.c.in  main.in.c
tests/functional_mock/helpers/: lt_mock_helpers.c  lt_mock_helpers.h
tests/integration/: CMakeLists.txt  integration_tests.md  main.c
tests/integration_tests/: CMakeLists.txt  index.md  main.c
tests/model_based/: CMakeLists.txt  README.md  main.c
tests/model_based_project/: CMakeLists.txt  README.md  compile_tests.sh  create_model_cfg.py  main.c  model_cfg.yml  model_logging_cfg.yml  model_test_runner.py  test.sh  test_runner.py
tests/model_based_project/python_server/: macnd_demo.py  macnd_demo.tcss
tropic01_model/: CMakeLists.txt  README.md  create_model_cfg.py  main.c
v1.0.0/: 404.html  index.html  sitemap.xml
v2.0.0/: 404.html  index.html  sitemap.xml
v2.0.1/: 404.html  index.html  sitemap.xml
v3.0.0/: 404.html  index.html  sitemap.xml
(+568 files in other folders)
